# ICRP110_HumanPhantoms_GCR

./: README  README.md
plotting_scripts/: cumulative_dose.py  dose_by_organ.py  dose_by_primary.py  energy_dep_vis.py  spectra_with_dose.py  weighting_test.py
source/: .ICRP110phantoms.cc.swp  CMakeLists.txt  ICRP110phantoms.cc  Makefile  cmake_install.cmake
source/ICRPdata-prefix/src/ICRPdata-stamp/: ICRPdata-urlinfo.txt  download-ICRPdata.cmake  extract-ICRPdata.cmake
source/include/: .ICRP110PhantomConstruction.hh.swp  .ICRP110PhantomDetector.hh.swp  .ICRP110PhantomHit.hh.swp  .ICRP110PhantomPrimaryGeneratorAction.hh.swp  .ICRP110PhantomRun.hh.swp  .ICRP110PhantomRunAction.hh.swp  G4PSDoseDepositMod.hh  ICRP110PhantomActionInitialization.hh  ICRP110PhantomConstruction.hh  ICRP110PhantomDetector.hh  ICRP110PhantomDoseDeposit.hh  ICRP110PhantomHit.hh  ICRP110PhantomNestedParameterisation.hh  ICRP110PhantomPrimaryGeneratorAction.hh  ICRP110PhantomRun.hh  ICRP110PhantomRunAction.hh  PSOrganName.hh  PSSecondaries.hh  PSSecondaryType.hh  RunFluxCount.hh  RunFluxCountAction.hh
source/src/: .ICRP110PhantomConstruction.cc.swp  .ICRP110PhantomDetector.cc.swp  .ICRP110PhantomPrimaryGeneratorAction.cc.swp  .ICRP110PhantomRun.cc.swp  .ICRP110PhantomRunAction.cc.swp  .PSSecondaryType.cc.swp  .RunFluxCountAction.cc.swp  G4PSDoseDepositMod.cc  ICRP110PhantomActionInitialization.cc  ICRP110PhantomConstruction.cc  ICRP110PhantomDetector.cc  ICRP110PhantomDoseDeposit.cc  ICRP110PhantomHit.cc  ICRP110PhantomNestedParameterisation.cc  ICRP110PhantomPrimaryGeneratorAction.cc  ICRP110PhantomRun.cc  ICRP110PhantomRunAction.cc  PSOrganName.cc  PSSecondaries.cc  PSSecondaryType.cc  RunFluxCount.cc  RunFluxCountAction.cc
